...
    <string name="menu_cdesc_sync">Sync stats.</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_cdesc_settings">Change settings.</string>
    <string name="menu_button_about">About</string>
    <string name="menu_cdesc_about">About the app.</string>
    <string name="pile_cdesc_empty">Pile is empty.</string>
    <string name="scoreboard_stat_moves">Moves\n%1$s</string>
    <string name="scoreboard_stat_time">Time\n%1$s</string>
    <string name="scoreboard_stat_score">Score\n%1$s</string>
    <string name="reset_ad_confirm_restart">Restart</string>
    <string name="reset_ad_confirm_new">New</string>
    <string name="reset_ad_dismiss">No</string>
    <string name="reset_ad_title">Are you sure?</string>
    <string name="reset_ad_msg">You can choose to restart the current game, a game with a new shuffle, or continue with this game.\n\nThis game will count on your stats if more than 1 move has been made!!</string>
    <string name="tools_button_menu">Menu</string>
    <string name="tools_cdesc_menu">Open Menu.</string>
    <string name="tools_cdesc_reset">Reset game.</string>
    <string name="tools_button_reset">Reset</string>
    <string name="tools_cdesc_undo">Undo last move.</string>
    <string name="tools_button_undo">Undo</string>
    <string name="games_all">All</string>
    <string name="games_klondike_turn_one">Klondike (Turn One)</string>
    <string name="games_klondike_turn_three">Klondike (Turn Three)</string>
    <string name="games_classic_westcliff">Classic Westcliff</string>
    <string name="games_easthaven">Easthaven</string>
    <string name="games_yukon">Yukon</string>
...
    <string name="email_password_recovery">Recovery email has been sent.</string>
    <string name="password_error">Password must be at least 6 characters long and contain at least 1 digit, 1 lowercase letter, 1 uppercase letter, and 1 symbol.</string>
    <string name="empty_password_error">Password cannot be empty.</string>
    <string name="generic_error">Something went wrong. Please try again.</string>
    <string name="settings_account">Account</string>
    <string name="settings_animation_duration">Animation Speed</string>
    <string name="rules_stock">Stock</string>
    <string name="rules_waste">Waste</string>
    <string name="rules_foundation">Foundation</string>
    <string name="rules_tableau">Tableau</string>
    <string name="account_status_username_check">Checking username availability…</string>
    <string name="account_status_creating_account">Creating account…</string>
    <string name="account_status_sign_in">Signing In…</string>
    <string name="account_status_sign_out">Signing In…</string>
...
